# WiCAN

./: .gitignore  Features_TODO.md  README.md
Firmware/WiCAN_RX/: CMakeLists.txt  sdkconfig  sdkconfig.old
Firmware/WiCAN_RX/main/: CMakeLists.txt  WiCAN_RX.c  usb_driver.c  usb_driver.h
Firmware/WiCAN_TX/: CMakeLists.txt  sdkconfig  sdkconfig.old
Firmware/WiCAN_TX/main/: CMakeLists.txt  WiCAN_TX.c  sdmmc_driver.c  sdmmc_driver.h  usb_msc.c  usb_msc.h
Firmware/common/: button.h  data_types.h  rgb_led.c  rgb_led.h  slcan.c  slcan.h  temp_sensor.c  temp_sensor.h  twai_driver.c  twai_driver.h  wifi.c  wifi.h
Hardware/: Power.SchDoc  WiCAN_BOM.xlsx  WiCAN_lib.PcbLib  WiCAN_lib.SchLib  microSD.SchDoc
Hardware/Enclosure/: WiCAN_Enclosure_Base.3MF  WiCAN_Enclosure_Base.SLDPRT  WiCAN_Enclosure_assy.SLDASM
Hardware/WiCAN_V1/: CAN.SchDoc  Processor.SchDoc  WiCAN.PrjPcb  WiCAN_board_outline.dxf  WiCAN_master.SchDoc
Hardware/WiCAN_V1/Enclosure/: Aluminum_Heatsink.SLDPRT  Copper_Heatsink.SLDPRT  (+3 more)
Hardware/WiCAN_V2/: CAN.SchDoc  Power.SchDoc  Processor.SchDoc  RTC.SchDoc  USB_Interfaces.SchDoc  WiCAN.PrjPcb  WiCAN_lib.PcbLib  WiCAN_lib.SchLib  WiCAN_master.SchDoc  microSD.SchDoc
Software/Tests/: README.md
WiCAN_GUI/: CAN_Methods.py  file_parser.py  main.py  pyqtgraph_test.py  serial_parser.py
WiCAN_GUI/GUI/: GUI_methods.py  config_parser.py  main_window.ui
WiCAN_GUI/GUI_backend/: Cargo.toml
WiCAN_GUI/resources/: config.json
WiCAN_GUI/tools/: CAN_generation.py  dbc_viewer.py  serial_can_parse.py  serial_speed_test.py  slcan_logging.py  slcan_to_candump.py
(+11 files in other folders)
